--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
   <body>
     <div id="background"></div>
     <div id="menu">
-      <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
-      <a href="https://opensea.io/" target="_blank">NFT</a>
-      <a href="https://github.com/" target="_blank">GitHub</a>
-      <a href="https://www.arduino.cn/" target="_blank">Arduino</a>
+      <a href="https://chat.openai.com/" target="_blank">
+        <div class="button">ChatGPT</div>
+      </a>
+      <a href="https://opensea.io/" target="_blank">
+        <div class="button">NFT</div>
+      </a>
+      <a href="https://github.com/" target="_blank">
+        <div class="button">GitHub</div>
+      </a>
+      <a href="https://www.arduino.cn/" target="_blank">
+        <div class="button">Arduino</div>
+      </a>
     </div>
     <script src="script.js"></script>
   </body>
